# CrazyRL

./: .gitignore  .pre-commit-config.yaml  CITATION.bib  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: test.yml
crazy_rl/: __init__.py
crazy_rl/multi_agent/: __init__.py  base_parallel_env.py
crazy_rl/multi_agent/catch/: __init__.py  catch.py
crazy_rl/multi_agent/circle/: __init__.py  circle.py
crazy_rl/multi_agent/escort/: __init__.py  escort.py
crazy_rl/multi_agent/hover/: __init__.py  hover.py
crazy_rl/multi_agent/jax/: __init__.py  base_parallel_env.py
crazy_rl/multi_agent/numpy/: __init__.py  base_parallel_env.py
crazy_rl/multi_agent/surround/: __init__.py  surround.py
crazy_rl/test/: __init__.py  test_algos.py  test_jax.py  test_numpy.py  test_numpy_and_jax.py  test_vmap.py  test_wrapper.py
crazy_rl/utils/: __init__.py  config_crazyflie.yaml  experiments_and_plots.py  geometry.py  geometry.yaml  graphic.py  jax_spaces.py  jax_wrappers.py  pareto.py  utils.py
crazy_rl_unity/: .gitignore  Assembly-CSharp.csproj  CrazyRl_Unity.sln  crazy_rl_unity.sln  readme.md
crazy_rl_unity/Assets/: New Terrain 1.asset  New Terrain 2.asset  New Terrain.asset
crazy_rl_unity/Assets/Prefab/: Drone_red.prefab
crazy_rl_unity/Assets/Scenes/: CrazyUnity.unity
crazy_rl_unity/Assets/Script/: CameraController.cs  Client.cs  Data.cs  Drone.cs  Menu.cs  Wall.cs
crazy_rl_unity/Assets/_TerrainAutoUpgrade/: layer_ground_aground_a_normald261c09ae55ba1e3.terrainlayer
crazy_rl_unity/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  TagManager.asset
crazy_rl_unity/UserSettings/: EditorUserSettings.asset
crazy_rl_unity/UserSettings/Layouts/: default-2022.dwlt
learning/: construct_pareto_front.py  exec_mappo_fulljax.py  exec_masac_jax.py  exec_masac_torch.py  mappo.py  momappo.py  test.py  test_multiagent.py  test_multiagent_jax.py  test_square.py
learning/cpu_env/: mappo_cpu_env.py  wrappers.py
learning/execution/: construct_pareto_front.py  exec_mappo_policy.py
learning/fulljax/: mappo_fulljax.py  momappo_fulljax.py
results/: README.md  results_MAPPO_CPU_Circle_(1env)_0.csv  results_MAPPO_CPU_Circle_(1env)_1.csv  results_MAPPO_CPU_Circle_(1env)_2.csv  results_MAPPO_CPU_Circle_(1env)_3.csv  results_MAPPO_CPU_Circle_(1env)_4.csv  results_MAPPO_CPU_Circle_(1env)_5.csv  results_MAPPO_CPU_Circle_(1env)_6.csv  results_MAPPO_CPU_Circle_(1env)_7.csv  results_MAPPO_CPU_Circle_(1env)_8.csv  results_MAPPO_CPU_Circle_(1env)_9.csv  results_MAPPO_GPU_Circle_(10envs)_0.csv  results_MAPPO_GPU_Circle_(10envs)_1.csv  results_MAPPO_GPU_Circle_(10envs)_2.csv  results_MAPPO_GPU_Circle_(10envs)_3.csv  results_MAPPO_GPU_Circle_(10envs)_4.csv  results_MAPPO_GPU_Circle_(10envs)_5.csv  results_MAPPO_GPU_Circle_(10envs)_6.csv  results_MAPPO_GPU_Circle_(10envs)_7.csv  results_MAPPO_GPU_Circle_(10envs)_8.csv  results_MAPPO_GPU_Circle_(10envs)_9.csv  results_MAPPO_GPU_Circle_(128envs)_0.csv  results_MAPPO_GPU_Circle_(128envs)_1.csv  results_MAPPO_GPU_Circle_(128envs)_2.csv  results_MAPPO_GPU_Circle_(128envs)_3.csv  results_MAPPO_GPU_Circle_(128envs)_4.csv  results_MAPPO_GPU_Circle_(128envs)_5.csv  results_MAPPO_GPU_Circle_(128envs)_6.csv  results_MAPPO_GPU_Circle_(128envs)_7.csv  results_MAPPO_GPU_Circle_(128envs)_8.csv  results_MAPPO_GPU_Circle_(128envs)_9.csv  results_MAPPO_GPU_Circle_(1envs)_0.csv  results_MAPPO_GPU_Circle_(1envs)_1.csv  results_MAPPO_GPU_Circle_(1envs)_2.csv  results_MAPPO_GPU_Circle_(1envs)_3.csv  results_MAPPO_GPU_Circle_(1envs)_4.csv  results_MAPPO_GPU_Circle_(1envs)_5.csv  results_MAPPO_GPU_Circle_(1envs)_6.csv  results_MAPPO_GPU_Circle_(1envs)_7.csv  results_MAPPO_GPU_Circle_(1envs)_8.csv  (+4 more)
results/mo/: README.md  training_time_catch_0.csv  training_time_catch_1.csv  training_time_catch_2.csv  training_time_catch_3.csv  training_time_catch_4.csv  training_time_catch_5.csv  training_time_catch_6.csv  training_time_catch_7.csv  training_time_catch_8.csv  training_time_catch_9.csv  training_time_escort_0.csv  training_time_escort_1.csv  training_time_escort_2.csv  training_time_escort_3.csv  training_time_escort_4.csv  training_time_escort_5.csv  training_time_escort_6.csv  training_time_escort_7.csv  training_time_escort_8.csv  training_time_escort_9.csv  training_time_surround.csv  training_time_surround_0.csv  training_time_surround_1.csv  training_time_surround_2.csv  training_time_surround_3.csv  training_time_surround_4.csv  training_time_surround_5.csv  training_time_surround_6.csv  training_time_surround_7.csv  training_time_surround_8.csv  training_time_surround_9.csv
trained_model/actor_[0. 1.]/opt_state.1.0.mu.params.Dense_0.bias/: 0
trained_model/actor_[0.27561492 0.7243851 ]/: checkpoint
trained_model/actor_catch_4/: README.md  _METADATA  _sharding  manifest.ocdbt
trained_model/actor_catch_8_big_map/: README.md
trained_model/actor_circle_3/: README.md
trained_model/actor_escort_4/: README.md
trained_model/actor_escort_5/: README.md
trained_model/actor_surround_4/: README.md
trained_model/actor_surround_5/: README.md
(+1862 files in other folders)
