[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "crazy-rl"
version = "0.0.1"
description = "Environments and learning code for doing (MOMA)RL with CrazyFlies."
authors = ["Florian Felten <florian.felten@uni.lu>"]
license = "MIT"
readme = "README.md"
keywords = ["Reinforcement Learning", "Multi-Objective", "Multi-Agent", "RL", "AI", "gymnasium", "pettingzoo"]
classifiers = [
    "Development Status :: 4 - Beta",  # change to `5 - Production/Stable` when ready
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
]

[tool.poetry.dependencies]
python = "^3.8, <3.12"
gymnasium = "^0.27"
pettingzoo = "^1.22.3"
numpy = "^1.21.0"
torch = "^1.11.0, <2.0.0"
pygame = "^2.1.0"
pyopengl = "^3.1.5"
cflib = "*"
wandb = "*"
seaborn = "*"
tensorboard = "*"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.6"

[tool.poetry.group.testing.dependencies]
pytest = "^7.1.3"

# Linting, testing, ... ########################################################
[tool.black]
safe = true
line-length = 127
target-version = ['py37', 'py38', 'py39', 'py310']
include = '\.pyi?$'

[tool.isort]
atomic = true
profile = "black"
src_paths = ["crazy_rl"]
extra_standard_library = ["typing_extensions"]
indent = 4
lines_after_imports = 2
multi_line_output = 3
